Fix recipe result overflow on some screen sizes, remove their borders
This reverts commit d6b58428cf2171bc2c4f77874fc4ab135449b400.

--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@ header {
   display: flex;
   flex-direction: column;
   gap: 30px;
-  padding: 4rem;
+  padding: 2rem;
   background-color: #A9685E;
   color: #FFE5DC;
   width: 100%;
